--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
   <section id="resources">
     <h2>자료실 & 오픈소스</h2>
     <p>여기에는 강의 노트, 실습 예제, 영상 자료 등이 포함됩니다. GitHub 저장소에서 모두 공개되어 있으며 누구나 접근 가능합니다.</p>
-    <p><a href="https://github.com/당신의계정/교육저장소" class="btn" target="_blank">GitHub 저장소 열기</a></p>
+    <p><a href="https://github.com/KY-AISW" class="btn" target="_blank">GitHub 저장소 열기</a></p>
   </section>
 
   <section id="contact">
-    <h2>문의</h2>
-    <p>이메일: example@kyu.ac.kr</p>
-    <p>깃허브: <a href="https://github.com/당신의계정" target="_blank">github.com/당신의계정</a></p>
+    <h2>Contect</h2>
+    <p>이메일: konyang.swsw@gmail.com</p>
+    <p>깃허브: <a href="https://github.com/KY-AISW" target="_blank">github.com/당신의계정</a></p>
   </section>
 </div>
 
 <footer>
   <p>&copy; 2025 건양대 AI & SW 교육 허브</p>
-  <p>제작: 학생팀 / 오픈소스 기반</p>
+  <p>제작: SW전공교육강화실 / 오픈소스 기반</p>
 </footer>
 
 </body>
