--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <section id="contact">
     <h2>Contect</h2>
     <p>이메일: konyang.swsw@gmail.com</p>
-    <p>깃허브: <a href="https://github.com/KY-AISW" target="_blank">github.com/당신의계정</a></p>
+    <p>깃허브: <a href="https://github.com/KY-AISW" target="_blank">github.com/건양대학교AISW중심대학</a></p>
   </section>
 </div>
 
