--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 </button>
                 <button class="border-2 border-white text-white px-8 py-4 rounded-lg font-semibold hover:bg-white hover:text-blue-600 transition-colors">
                     GitHub 자료실
-                    <a href="https://github.com/ky-aisw" class="hover:text-white transition-colors">GitHub</a>
+                    <a href="https://github.com/ky-aisw" class="hover:text-white transition-colors"></a>
                 </button>
             </div>
         </div>
@@ -199,8 +199,8 @@
                             <span class="text-white font-bold">KY</span>
                         </div>
                         <div>
-                            <h3 class="font-bold">건양대학교 - AI & SW 교육 허브</h3>
-                            <p class="text-sm text-gray-400">전공교육강화실</p>
+                            <h3 class="font-bold">건양대학교</h3>
+                            <p class="text-sm text-gray-400">AI & SW 교육 허브</p>
                         </div>
                     </div>
                     <p class="text-gray-400">
@@ -229,7 +229,7 @@
             </div>
             
             <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
-                <p>© 2025 건양대학교 AI & SW 교육 허브. All rights reserved.</p>
+                <p>© 건양대학교 전공교육강화실. All rights reserved.</p>
             </div>
         </div>
     </footer>
