--- a/index.html
+++ b/index.html
@@ -182,8 +182,7 @@
                     수강 신청하기
                 </button>
                 <button class="border-2 border-white text-white px-8 py-4 rounded-lg font-semibold hover:bg-white hover:text-blue-600 transition-colors">
-                    GitHub 자료실
-                    <a href="https://github.com/ky-aisw" class="hover:text-white transition-colors"></a>
+                    <a href="https://github.com/ky-aisw" class="hover:text-white transition-colors">GitHub 자료실</a>
                 </button>
             </div>
         </div>
